k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: td
  namespace: td
spec:
  replicas: 1
  selector:
    matchLabels:
      app: td
  template:
    metadata:
      labels:
        app: td
    spec:
      containers:
        - name: td
          image: ghcr.io/mvaldes14/task-manager:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /auth/status
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /auth/status
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: td
  namespace: td
spec:
  selector:
    app: td
  ports:
    - port: 80
      targetPort: 5000
